syntax = "proto3";
package recommendation;
option go_package = "github.com/yourusername/yourproject/internal/proto/recommendation";

message RecommendationRequest {
    string user_id = 1;
    uint64 article_id = 2;
}

message RecommendationResponse {
    repeated uint64 product_ids = 1;
}

service RecommendationService {
  rpc GetRecommendations(RecommendationRequest) returns (RecommendationResponse);
}